--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -33,8 +33,9 @@
   <div class="create">
     <h2>Create a booking</h2>
       <%= simple_form_for [@doll, @booking] do |f| %>
-        <%= f.input :start_date, as: :date, html5: true %>
-        <%= f.input :end_date, as: :date, html5: true %>
+        <%= f.input :start_date, as: :date, html5: true, required: true %>
+        <%= f.input :end_date, as: :date, html5: true, required: true %>
+
           <div class="row">
             <div class="col text-center">
               <%= f.submit 'Create a booking', class: "btn-ghost" %>
